--- a/lakefile.toml
+++ b/lakefile.toml
@@ -7,7 +7,7 @@ pp.unicode.fun = true
 [[require]]
 name = "mathlib"
 scope = "leanprover-community"
-rev = "v4.23.0-rc2"
+rev = "v4.27.0"
 
 [[lean_lib]]
 name = "Bdd"
